# rsweb

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-generate.toml
.github/workflows/: release.yml
.history/: Cargo_20260302115151.toml  Cargo_20260302115209.toml  Cargo_20260302115236.toml  Cargo_20260302120201.toml  Cargo_20260302121233.toml  Cargo_20260302121240.toml  Cargo_20260302121242.toml  Cargo_20260302121736.toml  Cargo_20260302121858.toml  Cargo_20260302121930.toml  Cargo_20260302122115.toml  Cargo_20260302131429.toml  Cargo_20260302132525.toml  Cargo_20260302132530.toml
.history/.github/workflows/: release_20260302140638.yml  release_20260302165234.yml  release_20260302165310.yml  release_20260302165332.yml  release_20260302165340.yml  release_20260302165408.yml  (+18 more)
.history/src/: main_20260302120401.rs  main_20260302120752.rs  main_20260302131105.rs  main_20260302131110.rs  main_20260302131121.rs  main_20260302131134.rs  main_20260302131225.rs  main_20260302133952.rs  main_20260302133955.rs  main_20260302134003.rs  main_20260302135432.rs  main_20260302142442.rs  main_20260302144444.rs  main_20260302144503.rs  main_20260302144510.rs  main_20260302144524.rs  main_20260302144607.rs  main_20260302144626.rs  main_20260302144647.rs  main_20260302144656.rs  main_20260302144701.rs  main_20260302144710.rs  main_20260302144726.rs  main_20260302144731.rs  main_20260302144742.rs  main_20260302144751.rs  main_20260302144757.rs  main_20260302144848.rs  main_20260302145443.rs  main_20260302145459.rs  main_20260302145527.rs  main_20260302150710.rs  main_20260302150714.rs  main_20260302150728.rs  main_20260302150811.rs  main_20260302150821.rs  main_20260302153103.rs  main_20260302153134.rs  main_20260302153145.rs  main_20260302153158.rs  (+4 more)
.history/web/: vite.config_20260302135727.ts
sidecar/: README.md
sidecar/x86_64-apple-darwin/: hello
src/: daemon.rs  error.rs  main.rs  utils.rs
src/gateway/: api.rs  base.rs  mod.rs  models.rs  sse.rs  state.rs  static_files.rs  ws.rs
src/sidecar/: mod.rs
web/: README.md  vite.config.ts
web/src/: App.tsx
(+49 files in other folders)
