[package]
build = "build.rs"
edition = "2021"
name = "rsweb"
version = "0.1.0"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI - minimal and fast
clap = {version = "4.5", features = ["derive"]}
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = {version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"]}
tokio-stream = {version = "0.1.18", default-features = false, features = ["fs", "sync"]}
tokio-util = {version = "0.7", default-features = false}
# Serialization
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_ignored = "0.1"
serde_json = {version = "1.0", default-features = false, features = ["std"]}
# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = {version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"]}
http-body-util = "0.1"
tower = {version = "0.5", default-features = false}
tower-http = {version = "0.6", default-features = false, features = ["limit", "timeout"]}

# Embed frontend assets into binary (web dashboard)
mime_guess = "2"
rust-embed = "8.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# bin 临时写入
tempfile = "3"

#  fs_extra
fs_extra = "1.3.0"

[profile.release]
codegen-units = 1 # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
lto = "fat" # Maximum cross-crate optimization for smaller binaries
opt-level = "z" # Optimize for size
# Higher values (e.g., 8) compile faster but require more RAM during compilation
panic = "abort" # Reduce binary size
strip = true # Remove debug symbols

[profile.release-fast]
codegen-units = 8 # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
inherits = "release" 
# Use: cargo build --profile release-fast

[[bin]]
name = "rsweb"
path = "src/main.rs"

[build-dependencies]
fs_extra = "1.3.0"
